<resources>
    <string name="app_name">Annelis App</string>
    <string name="title_activity_start_list">StartListActivity</string>
    <string name="tab_text_1">Задачи</string>
    <string name="tab_text_2">Галерея</string>
    <string name="tab_text_3">Мерки</string>
    <string name="tab_text_4">Материалы</string>
    <string name="title_activity_projects_list">ProjectsListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="projects_list_title">Текущие проекты</string>
    <string name="task_add_title">Добавление задачи</string>
    <string name="task_name_hint">Название</string>
    <string name="task_add_accept">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="task_del_title">Удалить задачу?</string>
    <string name="no_tasks_msg">Здесь еще нет добавленных задач. Исправьте это!</string>
    <string name="add_task">Добавить задачу</string>
    <string name="new_project">Новый проект</string>
    <string name="project_name">Название</string>
    <string name="project_desc">Описание</string>
    <string name="create_project">Создать</string>
    <string name="project_del_title">Удалить проект?</string>
</resources>
